--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
     "drizzle-orm": "^0.35.3",
     "pg": "^8.13.1"
   },
+  "scripts": {
+    "seed": "npx tsx src/db/seed.ts"
+  },
   "devDependencies": {
+    "@faker-js/faker": "^9.1.0",
+    "@types/node": "^22.8.4",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.26.2",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
   }
 }
